--- a/pom.xml
+++ b/pom.xml
@@ -66,10 +66,16 @@
 			<version>11.0.0-M4</version>
 		</dependency>
 		<dependency>
-			<groupId>javax.servlet.jsp.jstl</groupId>
+			<groupId>jstl</groupId>
 			<artifactId>jstl</artifactId>
-			<version>1.2</version>
+			<version>1.1.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>3.0.4</version>
+		</dependency>
+
 
 
 	</dependencies>
