fmdStockPhoto program. version 1.0.6 Entity packages has been updated Dto classes has been updated Repository classes has been updated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/fmdStockPhoto
+spring.datasource.username=postgres
+spring.datasource.password=04071982
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.default_schema=fmdStockPhoto
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+logging.level.org.hibernate.SQL=debug
+logging.level.org.type.descriptor.sql.BasicBinder=ERROR
